--- a/_posts/2023-05-13-PQ-本土政權的終結或延續3-蔡政府改革未竟-轉型正義沒有保守空間.html
+++ b/_posts/2023-05-13-PQ-本土政權的終結或延續3-蔡政府改革未竟-轉型正義沒有保守空間.html
@@ -68,27 +68,27 @@ author: 林奕辰
 
 
 
-<p>林佳和提醒，這些數值持平發展，顯示出蔡政府雖然在經濟、外貿表現亮眼，卻沒有明顯改善貧富差距，而這些民生指標往往會反映在地方選舉上，如 2018 年與 2022 年的挫敗。</p>
+<p>林佳和提醒，這些數值持平發展，顯示出<strong>蔡政府雖然在經濟、外貿表現亮眼，卻沒有明顯改善貧富差距，而這些民生指標往往會反映在地方選舉上，如 2018 年與 2022 年的挫敗</strong>。</p>
 
 
 
-<p>林佳和也從「主觀階級意識」分析，蔡總統執政期間認為自己是「中下階層」的人雖沒有馬政府時代高，卻逐年升高，這是一種警訊，顯示蔡政府在內政方面受到「新自由主義」牽引，大規模減稅、國家能力減弱，無法有效管制企業，導致股市、房地產等非生產性事業膨脹，使所得分配惡化。</p>
+<p>林佳和也從「主觀階級意識」分析，蔡總統執政期間，認為自己是「中下階層」的人雖沒有馬政府時代高，卻逐年升高，這是一種警訊，顯示<strong>蔡政府在內政方面受到「新自由主義」牽引，大規模減稅、國家能力減弱，無法有效管制企業，導致股市、房地產等非生產性事業膨脹，使所得分配惡化</strong>。</p>
 
 
 
-<p>林佳和說明，從 GDP 數值更能看出台灣所得分配不均。過去 40 年來，雖然台灣總體經濟表現越來越好，勞工對 GDP 的貢獻（勞方所得）卻逐年下降，代表錢都被資方拿去了，台灣不是「藏富於民」而是「藏於富民」。除此之外，台灣受雇人員的報酬也越來越低，有 275 萬人月薪不到 3 萬元。</p>
+<p>林佳和說明，從 GDP 數值更能看出台灣所得分配不均。過去 40 年來，雖然台灣總體經濟表現越來越好，勞工對 GDP 的貢獻（勞方所得）卻逐年下降，代表錢都被資方拿去了，<strong>台灣不是「藏富於民」而是「藏於富民」</strong>。除此之外，台灣受雇人員的報酬也越來越低。</p>
 
 
 
-<p>林佳和指出，台灣也有許多社福制度面臨危機，例如勞工保險即將破產，必須採取革命性的改變。然而台灣的稅收只佔總體 GDP 約 13%，北歐社會福利國家則佔將近一半，若想國家落實社福政策，不能不思考稅務負擔的問題。</p>
+<p>林佳和指出，台灣也有許多社福制度面臨危機，例如<strong>勞工保險即將破產，必須採取革命性的改變</strong>。然而台灣的「稅負」約 13%，幾乎是工業國家排名殿後，北歐社會福利國家，如丹麥的稅負甚至接近 50 %，將近一半，若想國家落實社會福利政策，不能不思考稅負的問題。</p>
 
 
 
-<p>林佳和表示，青年失業問題也須面對，台灣青年失業率相較國人平均失業率超過 3.2 倍，是世界第二嚴重，和所有 OECD 國家相比，也只有台灣人學歷越高、失業率越高，長期失業者中最高比例的是大專畢業生。</p>
+<p>林佳和表示，青年失業問題也須面對，<strong>台灣青年失業率相較國人平均失業率超過 3.2 倍</strong>，<strong>是世界第二嚴重</strong>，<strong>和所有 OECD 國家</strong>（全球有 38 個市場經濟體的成員國）<strong>相比</strong>，<strong>也只有台灣人學歷越高、失業率越高，長期失業者中最高比例的是大專畢業生</strong>。</p>
 
 
 
-<p>林佳和評價，必須承認，蔡英文執政期間社會政策領域黯淡，雖然比馬政府更加重視相關問題，卻沒有突破性的舉措。他認為，如果我們在乎多數庶民的生活，也在乎民主的鞏固，內政問題應該得到更大的重視。</p>
+<p>林佳和評價，必須承認，<strong>蔡英文執政期間社會政策領域黯淡</strong>，<strong>雖然比馬英九政府更加重視相關問題，卻沒有突破性的舉措</strong>。他認為，如果我們在乎多數庶民的生活，也在乎民主的鞏固，內政問題應該得到更大的重視。</p>
 
 
 
