--- a/_posts/2023-05-13-PQ-本土政權的終結或延續5-深度提問犀利答.html
+++ b/_posts/2023-05-13-PQ-本土政權的終結或延續5-深度提問犀利答.html
@@ -16,7 +16,7 @@ author: 嚴 武臣
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-1024x683.jpg" alt="" class="wp-image-136380" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468.jpg 1600w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣基進黨主席王興煥闡述獨派小黨堅定的立場如何能讓綠營選票最大化<br>圖／台獨聯盟提供</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-1024x683.jpg" alt="" class="wp-image-136380" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/15917c4b-img_5468.jpg 1600w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣基進黨主席王興煥闡述獨派小黨堅定的立場如何能讓綠營選票最大化<br>圖／台獨聯盟提供</figcaption></figure></div>
 
 
 
@@ -60,11 +60,11 @@ author: 嚴 武臣
 
 
 
-<p>台灣制憲基金會副執行長宋承恩回應，首先他提到反戰學者郭力昕的荒謬錯誤，郭力昕認為俄羅斯入侵烏克蘭儘管是違反國際法，但是這場戰爭所帶來的種種痛苦、和不和平等因素不僅來自俄羅斯，美國明確知道北約東擴是俄羅斯領導層所有人的紅線，仍然執意挑釁；在俄入侵前夕，北約有更多更嚴重的東擴及軍事與飛彈部署及大型軍演等等都應該被追究。</p>
+<p>台灣制憲基金會副執行長宋承恩回應，國際法提供了國家行為的準則，與正當性的判斷標準。脫離國際法自行判斷，會出現偏差，淪為各說各話。例如俄羅斯用盡各種理由試圖正當化其武力侵略，運用例如「北約東擴」為其侵略提供藉口。面對這種說詞，評論者必須了解國際法上使用武力的標準，不能糢糊。若是像反戰學者傅大為，一方面認為俄羅斯違反國際法，卻又認為種種戰爭罪行「是俄羅斯式的報復」，判斷時就給予俄羅斯太多開脫的空間。套用到中國，同樣也陷入「對中國寬容丶對台灣嚴苛」的荒謬，竟然主張「若是共軍在台灣進行大規模屠殺，反戰人士才會起身抵抗」。共軍都已經上岸丶都已摧毀多少軍事目標，反戰教授才要抵抗？軍人都無法保護平民了，要如何抵抗？這是最大的偽善與荒謬。而這一切是從糢糊國際法上的標準開始。俄羅斯或中國侵略，就是違反國際法，沒有為它們找正當化藉口的空間。拿反戰作為藉口，卻不指責侵略者丶反而指責台灣提升國防戰力是挑釁求戰，種種錯亂都是從糢糊國際法開始。</p>
 
 
 
-<p>宋承恩認為，俄羅斯入侵烏克蘭就是犯下戰爭罪，沒有爭論的空間。拿反戰來作為藉口，反對台灣進一步提升國防戰力、全民備戰事實上就是偽善荒謬。宋承恩強調，今天的座談會強調「本土政權的延續」是有正當性的，而這個政權的延續必須是在以台灣為主體性的政黨之間，因為台灣就是台灣人的台灣。</p>
+<p class="pqnote">人類追求正當性。宋承恩強調，今天的座談會標題「本土政權的延續」，隱含「本土政權統治台灣才有正當性」的命題，因為台灣只能是台灣人的台灣。</p>
 
 
 
@@ -76,7 +76,7 @@ author: 嚴 武臣
 
 
 
-<p>宋承恩解釋，馬英九執政時期外交部當時的說帖，認為台灣和南海都是歸屬於中華民國。事實上中華民國就是中國，硬要說成是「兩個中國」在國際法上是說不通的，類似像這樣的論述該改就要改。「南海仲裁案」的內容是在各方面對台灣都有利的抗中仲裁，台灣政府不應該再繼續沿用馬英九時代錯誤的敘事方式，堅持「絕不接受，對中華民國不具法律約束力」的仲裁結果。堅持這種說詞根本就跟中華人民共和國是一樣的。</p>
+<p>宋承恩解釋，馬英九執政時期外交部當時的說帖，認為台灣和南海都是歸屬於中華民國。事實上中華民國就是中國，硬要說成是「兩個中國」在國際法上是說不通的，類似像這樣的論述該改就要改。「南海仲裁案」的內容是在各方面對台灣都有利的抗中仲裁，台灣政府不應該再繼續沿用馬英九時代錯誤的敘事方式，堅持「絕不接受，對中華民國不具法律約束力」的仲裁結果。堅持這種說詞，是受到過去中華民國對台灣或南海敘事主張的影響，根本就跟中華人民共和國是一樣的，並不是從台灣主體性的觀點出發。</p>
 
 
 
@@ -121,6 +121,10 @@ author: 嚴 武臣
 
 
 <p>針對轉型正義，陳俐甫直言，拆掉中正紀念堂可以說是普世價值的展現。但除此之外，台灣的公部門裡頭還有許多威權時期遺留的陳腐陋習沒有執行轉型正義，而這是不行的。</p>
+
+
+
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/0a4985e3-wufi-5-1024x989.jpg" alt="" class="wp-image-136454" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/0a4985e3-wufi-5-1024x989.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/0a4985e3-wufi-5-300x290.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/0a4985e3-wufi-5-768x742.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/0a4985e3-wufi-5-1536x1484.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/0a4985e3-wufi-5.jpg 2000w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣獨立建國聯盟與台灣安保協會所舉辦的「本土政權的終結或延續？」座談會綜合討論</figcaption></figure></div>
 
 
 
