Update VOCUS 2023-05-15 patch

--- a/_posts/2023-05-08-VOCUS-第六十則大哉問-面對屬於我們的黑水溝-雲門舞集-薪傳-觀後感.html
+++ b/_posts/2023-05-08-VOCUS-第六十則大哉問-面對屬於我們的黑水溝-雲門舞集-薪傳-觀後感.html
@@ -18,22 +18,19 @@ author: 陳政佑
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/58fd4f48-bda8-418d-aa35-d0b06d9b4734.jpg" data-width="1477" data-height="1108" data-position="center" src="https://images.vocus.cc/58fd4f48-bda8-418d-aa35-d0b06d9b4734.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《薪傳》謝幕</figcaption></div></figure>
 <blockquote class="draft-block draft--blockquote">一個世代都有自己的黑水溝，也有自己的風帆要破浪突圍。–《薪傳 ‧ 薪傳》</blockquote>
 <div class="draft-block draft--p left">　　《薪傳》首演適逢臺美斷交，讓一齣講述先民渡海來臺的舞作，更添增了許多歷史意義，當時的人看，會為社會氛圍，與舞作中先民艱苦的故事所感動，激奮至潸然淚下，可是對千禧世代來說，開墾實在距離過於遙遠，新一代的舞者平均身高比第一代多出七公分，這些年臺灣的經濟成長非常，大環境早已經不同以往，觀看舞作時，我感受不到先祖的悲愴，如同林懷民老師聽見年輕孩子唱到「不要問我從哪裡來」時的感想：「<span style="font-weight: bold; ">我曉得我們心裡的橄欖樹長得不一樣</span>。」</div>
-<div><iframe allowfullscreen src="https://open.spotify.com/track/0y58OaDt2n4Z3e9TN7Lqne?si=8db83dcfbc484288"></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/track/0y58OaDt2n4Z3e9TN7Lqne?si=8db83dcfbc484288"></iframe></div>
 <div class="draft-block draft--p left">　　這個時代的臺灣人所要面對的挑戰，與開墾先祖差異甚遠，我們多數不必出外尋找新的家園，轉而能帶著屬於自己的文化，到世界與全球分享。《薪傳》帶給我的震撼，是那堅忍不拔的精神，從心感受到向前進的熱血，屬於這時代的百年大疫逐漸落幕，那是我們的上一個挑戰，接下來即將面臨的下一個，或大或小，如我，<a href="https://vocus.cc/article/643d2e15fd897800019fde46" target="_blank" class="draft--a">即將赴美攻讀博班</a>，相信自古傳承下來的精神也會成為我的力量。</div>
 <blockquote class="draft-block draft--blockquote">臺灣人不必在災難和壓力下「愛拚才會贏」，也不必宿命地抱「住亞細亞的孤兒」的認同吧。　　–《薪傳 ‧ 薪傳》序 林懷民</blockquote>
 <div class="draft-block draft--p left">　　不知道未來赴美留學時，有沒有機會再看到雲門舞集的表演，這個舉世聞名的現代舞團，從臺灣出發飛到世界，林懷民老師在臺灣還沒有現代舞的時候，創辦雲門，也在舞臺上還沒有臺灣歷史的時候，編出《薪傳》。在不同故事分段間串接的《思想起》，為恆春歌手陳達所唱，據說當時唱了足足三小時，「<span style="font-weight: bold; ">臺灣後來好所在，三百年後人人知</span>」的歌詞彷彿預言般，不過這首歌所描述的臺灣歷史，也就到十大建設，哪首歌能唱出之後的歷史？我找了一下，沒有找到很滿意的，歡迎大家給出建議！不過我想，那首歌應該包含不只有臺語，也要有中文、客語、各族原住民語，還有以臺灣為家的新住民們的語言吧。</div>
 <h3 class="draft-block draft--h3" name="header-9u94h">陳達 《思想起》</h3>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/CJX5jaj2rPs"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/CJX5jaj2rPs"></iframe></div>
 <div class="draft-block draft--p left">這是我第一次看雲門，希望將來還有機會看現在由鄭宗龍藝術總監領導的演出。</div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-cu0v3">參考與推薦書籍：</h3>
 <ol>
   <li class="draft-block draft--li">《薪傳 ‧ 薪傳》古碧玲著 時報出版 </li>
   <li class="draft-block draft--li">《雲門舞集五十週年薪傳紀念專刊》</li>
 </ol>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">追蹤我的粉專→</span><a href="https://www.facebook.com/brainhavemouth" target="_blank" class="draft--a">https://www.facebook.com/brainhavemouth</a><br><span style="font-weight: bold; ">追蹤我的哀居粉專→</span><a href="https://www.instagram.com/brainhasmouth/" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://www.instagram.com/brainhasmouth/</span></a></div>
 <h2 class="draft-block draft--h2" name="header-dn3jk">喜歡我的文章按讚追蹤加分享！或是斗內抖起來！</h2>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">也能在留言處提出你的看法喔！</span></div>
 <h2 class="draft-block draft--h2" name="header-992bt"><span style="font-weight: bold; ">（想看以前的文章可以去付費訂閱～）</span></h2>
-<div class="draft-block draft--p left"></div>
