--- a/_posts/2023-05-11-VOCUS-廢線彼端的人造神明.html
+++ b/_posts/2023-05-11-VOCUS-廢線彼端的人造神明.html
@@ -15,7 +15,7 @@ author: 馬立
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/45abf8fb-016e-4442-ab61-2d540cda6622.jpg" data-width="1200" data-height="1714" data-position="center" src="https://images.vocus.cc/45abf8fb-016e-4442-ab61-2d540cda6622.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《廢線彼端的人造神明》</figcaption></div></figure>
 <div class="draft-block draft--p left">《廢線彼端的人造神明》跟「過往」的瀟湘神作品相比，顯得更加平易近人、飽含娛樂性，且依然保有瀟湘神一貫的邏輯推理趣味在——這裡將「過往」加上引號，是因為今年年初上市的《廢線彼端的人造神明》，其實是瀟湘神的「第一個臺灣故事」，只是成書時間較晚；先出版、我先看完的《言語道斷之死》系列，反而是後來才構思出來的故事。</div>
 <div class="draft-block draft--p left">根據後記，《廢線彼端的人造神明》的構思始於2008年，瀟湘透過對日本動畫《神靈狩》的錯誤理解（神零售）、對金瓜石史地的考察，以及對神秘學的各種認識而創造出了這個故事——《廢線彼端的人造神明》講述一群各行各業，年齡、性別各異的人們因故收到了「試用神祇」的邀請，各自獲得了不同的神力，有的人獲得了小偷之神的力量，只要看得到的東西都可以偷到手上；有的人獲得了機械之神的能力，只要有原料就能拼裝出任何想像得到的器械，持有神者也能輕易操作該器械；也有的人獲得了占卜之神，所有行動之前都可以先占卜吉凶……總數二十人的試用者各自被分配到不同能力的神祇，然而本該互相不認識的試用者們，卻在獲得神祇不久後，收到一封電子郵件，宣稱試用者們以深陷險境，想召集眾人前來商討對策……</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/2PnFw8dKc7o"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/2PnFw8dKc7o"></iframe></div>
 <div class="draft-block draft--p left">《廢線彼端的人造神明》中，神祇試用背後有著巨大的陰謀；這些被拿來試用的神祇如何誕生，背後也有一段驚奇的故事。試用者們因故在故事中劃分陣營，使用神力互相對抗；故事的看點，便是看著不同神力的持有者們發揮、詮釋神祇的力量互相征戰，以及在陣營未明前，試用者們如何透過試探、先驗、邏輯推理甚至占卜來拆穿敵對角色的偽裝、攻破不同陣營對手的心防。</div>
 <div class="draft-block draft--p left">故事裡也有青春戀曲、苦澀親情與多年的未解宿怨相互交纏，並與國際局勢、世界歷史有所關連——這個部分，對我來說也是這本作品如此有趣的根源之一：受到歐美、日本娛樂作品大量輸入的影響，作為臺灣人的我們似乎不免認為如果真有什麼國際性的大災難、影響全世界的大事件發生，似乎也都與我們這種「彈丸之地」沒什麼關係；就連2014年的好萊塢電影《哥吉拉》（Godzilla, 2014）中，從菲律賓破繭而出的巨大怪獸「穆透」想要尋找強大的放射能養分，也直接跳過臺灣核電廠，選擇前往更北方的日本核電廠。</div>
 <div class="draft-block draft--p left">但在本土創作者筆下，臺灣複雜的歷史脈絡與實際上的戰略地位終於浮上檯面，得以在列強環伺的處境中掌握一點討價還價的空間。有趣且值得一提的部分，在於本書出版後，似乎有中國讀者覺得本書「夾帶私貨」，具有某種不純思想；先不論作者本人想法、價值觀進入創作中為何可以被稱為「私貨」，瀟湘神其他的作品其實都可以很明顯地感受到其對於臺灣、對於殖民政府，甚至對中共政權的態度；反過來說，因為《廢線彼端的人造神明》故事位處的年代，其中的私貨可能還公了(?)一點呢！實際上，在幾次公開的作品活動上，作者也提到過三一八運動帶給當代本土創作者的影響；作為一本2008年開始發想的作品，《廢線彼端的人造神明》其實很值得拿來與瀟湘神在2014年後創作的作品進行比較，或許更能看出許多作者的轉變及其他有趣之處。</div>
@@ -23,5 +23,4 @@ author: 馬立
 <div class="draft-block draft--p left">獨步文化出版、瀟湘神構思十年，以臺灣、廢線鐵路為基底，結合島國史地與神秘學精華而成的熱血、青春、愛情故事——《廢線彼端的人造神明》，推薦給大家。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">最後讓我「夾帶私貨」一下，分享一下自己剪輯的台Ｖ「宅宅軍團長」介紹《廢線彼端的人造神明》的直播精華；宅宅軍團是專門分享、評論各種書籍、電影、劇場等情報知識的台Ｖ（也會玩遊戲，但堅持不開歌回），他會在每個月的開頭分享自己上個月看了哪些作品；在三月初分享的二月書單中，他分享、推薦了瀟湘的《廢線彼端的人造神明》。歡迎看看精華剪輯影片，有興趣的話也歡迎跟我一起訂閱宅宅的頻道喔！</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/sC7QsDrqVg4"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/sC7QsDrqVg4"></iframe></div>
