--- a/_posts/2023-05-12-INITIUM-一店一世界-当便利店员工-我看到-便利-背后的-重要之事.html
+++ b/_posts/2023-05-12-INITIUM-一店一世界-当便利店员工-我看到-便利-背后的-重要之事.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <p>「看著眼前琳琅满目的安全套，我开始不耐烦，心想到底它们有何分别？！」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230513-job-inside-out-convenience-store/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/4ada6688225a47cf923f16f8fcc55563.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="凌晨时份的旺角，便利店在四周漆黑中营业。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">凌晨时份的旺角，便利店在四周漆黑中营业。摄：林振东/端传媒</figcaption></figure><p><small>【编者按】“其实你返工有咩做㗎？”——这个问题，你有问过别人或被人问起吗？</small></p>
+            <figcaption itemprop="caption">凌晨时份的旺角，便利店在四周漆黑中营业。摄：林振东/端传媒<span class="credit"></span></figcaption></figure><p><small>【编者按】“其实你返工有咩做㗎？”——这个问题，你有问过别人或被人问起吗？</small></p>
 <p><small>这个来自日常的问题，启发我们开启“返工这回事”这个新栏目。在当代社会，工作主宰我们的生活，既定义个人的身份，亦维系社会的“正常”运转，但在“隔行如隔山”的区隔中，我们并不容易看见彼此——从恒常的工作劳动，到行业内的语言词汇、职场文化、人际关系、性别分工、权力层级以至价值体系。借此栏目，我们希望打破边界，深入聆听多位“打工仔”的行业见闻，不但走进社会各行业的“贴地”日常，亦从职业的视角观照当代社会的切面和现象。</small></p>
 <p><small>这一期文章，我们走进“梗有一间喺左近”（总有一间在附近）的便利店世界。透过一位工作三个月的年轻店员讲述，我们将了解在这个小世界，什么才是“重要之事”；在方便快捷的便利店背后，有哪些繁琐的工序；在便利店的世界，我们又怎样看当代到消费社会的特质？</small></p>
 <p><small>撰文：小薯　策划：艾迪</small></p>
