--- a/_posts/2023-05-12-INITIUM-土耳其大选-海外-首投-选民-我们要把埃尔多安赶下台.html
+++ b/_posts/2023-05-12-INITIUM-土耳其大选-海外-首投-选民-我们要把埃尔多安赶下台.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <p>「入学升职靠关系，女性被视为玩偶，宗教少数被逼害－－他们觉得，这个国家烂到骨子里了。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230513-international-first-time-voters-in-turkish-elections/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/12b3ec1f88594149a6efce257823ccd8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"></figcaption></figure><p><small>土耳其大选将于2023年5月14日举行。这场是今年国际社会最重要的一场选举，因已任实权元首二十年的“土耳其强人”埃尔多安（Recep Tayyip Erdoğan）及其领导的执政党“正义与发展党”（AKP）有机会在这次大选中落败。有可能把强人拉下台的，除了土耳其正面对的严峻经济问题，还有在二月大地震中暴露的各种管治失当和贪污舞弊。同时，埃尔多安也面对著其他争议：其政府在叙利亚战争中的政策﹑“政治伊斯兰”与国内人权问题﹑以及土耳其与俄罗斯的关系。而这场选举结果，亦将影响北约﹑欧盟和中俄在中东地区的影响力，以及土耳其在俄乌战争中的角色。</small></p>
+            <figcaption itemprop="caption"><span class="credit">插画：Mantha Mok</span></figcaption></figure><p><small>土耳其大选将于2023年5月14日举行。这场是今年国际社会最重要的一场选举，因已任实权元首二十年的“土耳其强人”埃尔多安（Recep Tayyip Erdoğan）及其领导的执政党“正义与发展党”（AKP）有机会在这次大选中落败。有可能把强人拉下台的，除了土耳其正面对的严峻经济问题，还有在二月大地震中暴露的各种管治失当和贪污舞弊。同时，埃尔多安也面对著其他争议：其政府在叙利亚战争中的政策﹑“政治伊斯兰”与国内人权问题﹑以及土耳其与俄罗斯的关系。而这场选举结果，亦将影响北约﹑欧盟和中俄在中东地区的影响力，以及土耳其在俄乌战争中的角色。</small></p>
 <p><small>由四月底开始，逾三百四十万名流散土耳其公民就可以在海外投票，约占合资格选民人数的5%。据多家媒体报道，今年海外投票人数明显高于2018年大选。这些海外票很可能是这场选举的胜负关键。端传媒访问了三位第一次投票的海外年轻选民。他们跟大部份年轻选民一样，都把票投给了反对派，但更重要的是－－为甚么？ </small></p>
 <p><strong>（孙乐欣，端传媒实习记者）</strong></p>
 <h3>Zeynep（大学生，居于英国）</h3>
