--- a/_posts/2023-05-12-INITIUM-马里乌波尔围城战-美联社凭俄乌战争独家报导摘下普立兹奖.html
+++ b/_posts/2023-05-12-INITIUM-马里乌波尔围城战-美联社凭俄乌战争独家报导摘下普立兹奖.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <p>「“今天，身处现场采访比任何时候都重要。否则，便不能捕捉面前的世界，虽然这是十分肮脏、困难、危险的工作。”」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230513-photo-pulitzers-ap-ukraine-coverage/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/aaf7cdd8fc324b4db2ccb0ce4dda95c5.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月9日，俄乌战争期间，乌克兰救援人员从一家遭俄罗斯军队砲击的妇产医院内运送一名受伤的孕妇。孕妇的名字叫Iryna Kalinina，婴儿最终难产，Iryna Kalinina亦在半小时后离世。摄：Evgeniy Maloletka/AP" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年3月9日，俄乌战争期间，乌克兰救援人员从一家遭俄罗斯军队砲击的妇产医院内运送一名受伤的孕妇。孕妇的名字叫Iryna Kalinina，婴儿最终难产，Iryna Kalinina亦在半小时后离世。摄：Evgeniy Maloletka/AP</figcaption></figure><p><strong>特约撰稿人难分</strong></p>
+            <figcaption itemprop="caption">2022年3月9日，俄乌战争期间，乌克兰救援人员从一家遭俄罗斯军队砲击的妇产医院内运送一名受伤的孕妇。孕妇的名字叫Iryna Kalinina，婴儿最终难产，Iryna Kalinina亦在半小时后离世。摄：Evgeniy Maloletka/AP<span class="credit"></span></figcaption></figure><p><strong>特约撰稿人难分</strong></p>
 <p>2022年2月24日，俄罗斯全面入侵乌克兰，美联社影片记者 Mstyslav Chernov 在战争开始时就有预感，位处乌克兰南部亚速海（Sea of Azov）旁边，拥有丰富铁矿资源，具重要战略价值的深水港口城市马里乌波尔（Mariupol），会成为普京虎视眈眈的囊中物。</p>
 <p>2月23日傍晚，Chernov 凭直觉与另一位美联社摄影记者 Evgeniy Maloletka 连夜开车进入马里乌波尔。俄军正准备大举入侵，大部分国际媒体因安全理由纷纷撤离，两人反其道而行，最终在凌晨3时30分抵达，俄乌战争在一小时后正式爆发。</p>
 <p>在接下来近3个星期，美联社是唯一留守的国际媒体，记者的报导成为全球观看马里乌波尔的眼睛。他们二人与影片制作人 Vasilisa Stepanenko，在猛烈的空袭和炮火声中，缺水缺电网络中断的恶劣环境之下，冒生命危险记录现场情况。</p>
