--- a/_posts/2023-05-13-INITIUM-土耳其大选现场-埃尔多安-和他失落的帝国梦.html
+++ b/_posts/2023-05-13-INITIUM-土耳其大选现场-埃尔多安-和他失落的帝国梦.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <p>「伊斯坦堡是土耳其。在安那托利亚腹地，很多人一辈子可能都看不到一次像我这样的东亚面孔的地方，那也是土耳其。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-international-erdogan-and-his-sultan-dream/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/eb720ba5dd774c2a883f65dc408fe5be.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年5月7日，土耳其总统埃尔多安在伊斯坦堡阿塔图尔克机场开展竞选活动。摄：CTK via AP/达志影像" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2023年5月7日，土耳其总统埃尔多安在伊斯坦堡阿塔图尔克机场开展竞选活动。摄：CTK via AP/达志影像</figcaption></figure><p><strong>（陈婉容，端传媒记者）</strong></p>
+            <figcaption itemprop="caption">2023年5月7日，土耳其总统埃尔多安在伊斯坦堡阿塔图尔克机场开展竞选活动。摄：CTK via AP/达志影像<span class="credit"></span></figcaption></figure><p><strong>（陈婉容，端传媒记者）</strong></p>
 <p>仍有凉意的五月，我第一次见识到埃尔多安在土耳其首府安卡拉的府邸，一座叫“Cumhurbaşkanlığı Külliyesi”（总统府复合体；presidential complex）的庞然大物。</p>
 <p>这座占地面积足有两个白金汉宫的“复合体”建成于2014年，埃尔多安正式坐上总统宝座的一年。虽然英文译名“presidential complex”看起来很普通，“Külliyesi”或“库里耶”却大有来头。阿拉伯语“kûl”的意思是“每一个”﹑“所有”，而库里耶其实就是一个以清真寺为核心的建筑复合体，里面顾名思义甚么都有：土耳其浴场﹑崇拜场所﹑伊斯兰学校（Madrasa）﹑食堂、医院（Dar al-Shifa）﹑有五万册藏书的图书馆。这里除了是埃尔多安本人的府邸﹑办公室，还是政府各部人员的办公场所。现代土耳其传统的分权（separation of powers）在这个“包罗万有”的地方不复存在。数年前埃尔多安还要在这里增建一个“白宫式”的总理府建筑复合体，只是计划被法院驳回了。</p>
 <p>库里耶是鄂图曼帝国（1299-1923；中国大陆较常作“奥斯曼帝国”）的标志性建筑，而鄂图曼帝国就是埃尔多安“土耳其大国梦”的创世神话：在帝国最兴盛的时期，土耳其作为一个伊斯兰势力，在版图和影响力上都能跟基督教势力平起平坐，甚至曾是欧洲第一强国。二十世纪后，这个幅员在极盛时期从中亚细亚延伸至北非和西欧的帝国跟不上现代化步伐，逐渐成为了欧洲列强眼中的“病夫”。但帝国无疑鼎盛过﹑辉煌过。土耳其人不会不记得，至少埃尔多安几乎每天都在重复提醒他们。</p>
