--- a/_posts/2023-05-13-INITIUM-数据看-做人妈妈甚艰难-母职惩罚-第二轮班及未完成的家庭友善政策.html
+++ b/_posts/2023-05-13-INITIUM-数据看-做人妈妈甚艰难-母职惩罚-第二轮班及未完成的家庭友善政策.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <p>「常言“世上只有妈妈好”，但数据告诉我们，世界对妈妈并不那么好。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-dataphile-as-a-mum/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/61acfa959c124062a9f602a97df0cac1.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"></figcaption></figure><p><strong>特约撰稿人艾迪、端传媒记者王怡蓁、图表设计师郭瑾烨</strong></p>
+            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><strong>特约撰稿人艾迪、端传媒记者王怡蓁、图表设计师郭瑾烨</strong></p>
 <p>“母亲节快乐！”又到一年一度的母亲节，这天“颂亲恩”的气氛满溢，很多人趁次机会答谢母亲，歌颂母爱的伟大：街头有免费派发的康乃馨，商户有专为母亲节而设的礼物推广，而食肆尽是子女陪同妈妈用餐的人流。</p>
 <p>女人即母亲，像很多社会一样，香港和台湾的社会文化高举母爱的神话，将大量女性推向母亲身份，却也往往漠视母亲面对的困难处境。无论是准备充分的母亲，还是半推半就、刚好成为人母，母亲的日常不总是那么幸福美满，反而伴随著各种艰难、倦怠和沮丧。</p>
 <p>端传媒从香港和台湾的调查数据切入，呈现母亲的身体经验和人生待遇。常言“世上只有妈妈好”，但数据告诉我们：做人妈妈甚艰难，这个世界对妈妈并非那么好。</p>
