--- a/_posts/2023-05-14-INITIUM-2023台湾新闻摄影大赛-端传媒夺8奖.html
+++ b/_posts/2023-05-14-INITIUM-2023台湾新闻摄影大赛-端传媒夺8奖.html
@@ -9,16 +9,17 @@ author:
 ---
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/c658512aa1f044a09e915173b440a3ae.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月25日，苗栗，一名士兵在汉光演习期间用手机通讯。摄：陈焯煇/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年7月25日，苗栗，一名士兵在汉光演习期间用手机通讯。摄：陈焯煇/端传媒</figcaption></figure><p>台湾新闻摄影协会“2023台湾新闻摄影大赛”公布得奖名单，端传媒获得八个奖项。</p>
+            <figcaption itemprop="caption">2022年7月25日，苗栗，一名士兵在汉光演习期间用手机通讯。摄：陈焯煇/端传媒<span class="credit"></span></figcaption></figure><p>台湾新闻摄影协会“2023台湾新闻摄影大赛”公布得奖名单，端传媒获得八个奖项。</p>
 <p>端传媒摄影记者林振东获得“年度最佳新闻作品集”，该组别规定摄影师提交全年拍摄的15-30张新闻作品。林振东参赛作品包括30张主要呈现2022年香港变幻的相片，这一年香港大规模庆祝回归，到处旗海飘扬，香港迎来第一位警察出身的特首；严峻疫情自春节开始肆虐，许多长者染疫离世；在既祥和又沉痛的气氛之中，香港政坛和公民社会继续经历震荡，这一年六四维园烛光晚会继续缺席，超过70年历史的珍宝海鲜舫离港后沉没大海.....这一系列相片串起主权移交25年的香港瞬间。</p>
 <p>同时，林振东亦以2022的12张纪录香港的系列照片“25年后，香港所失去的”夺得系列照片冠军。</p>
-<p>端传媒摄影记者陈焯煇凭拍摄转型正义下台湾现存的蒋介石像，获得系列照片亚军，亦凭民进党政治人物，总统蔡英文及台北市长候选人陈时中在大雨下的造势活动，获得“一般新闻类”亚军。此外，他拍摄花莲玉里大地震后的断桥，获突发新闻类季军。于体育新闻类、图文特写类及当代热点之系列照片，均夺优选奖。其中，当代热点的系列照片拍摄于2022年间，台湾与中国的紧张局势，岛上的军事或民安演习，捕捉台海危机下市民的状态。</p>
-<p>年度最佳新闻摄影作品经评审团一致肯定，由黄品维先生拍摄之一般新闻类获得。评审认为该作品呈现了在美国众议院议长裴洛西访台后，共军实施一系列围台军演，而我国国军也加强戒备。但台湾多数民众并未受到影响，照片在基隆外木山海域游玩的民众，与远方的海军形成强烈对比。本届台湾新闻摄影大奖共收到97名摄影师共1794张作品，由五位评审：摄影史研究者陈佳琦、影像工作者连慧玲、资深影像工作者黄子明、资深摄影记者村旭、 台湾艺术大学兼任副教授沈昭良评选。</p>
+<p>端传媒摄影记者陈焯𪸩凭拍摄转型正义下台湾现存的蒋介石像，获得系列照片亚军，亦凭民进党政治人物，总统蔡英文及台北市长候选人陈时中在大雨下的造势活动，获得“一般新闻类”亚军。此外，他拍摄花莲玉里大地震后的断桥，获突发新闻类季军。于体育新闻类、图文特写类及当代热点之系列照片，均夺优选奖。其中，当代热点的系列照片拍摄于2022年间，台湾与中国的紧张局势，岛上的军事或民安演习，捕捉台海危机下市民的状态。</p>
+<p>年度最佳新闻摄影作品经评审团一致肯定，由黄品维先生拍摄之一般新闻类获得。评审认为该作品呈现了在美国众议院议长裴洛西访台后，共军实施一系列围台军演，而国军也加强戒备。但台湾多数民众并未受到影响，照片在基隆外木山海域游玩的民众，与远方的海军形成强烈对比。本届台湾新闻摄影大奖共收到97名摄影师共1794张作品，由五位评审：摄影史研究者陈佳琦、影像工作者连慧玲、资深影像工作者黄子明、资深摄影记者村旭、 台湾艺术大学兼任副教授沈昭良评选。</p>
+<p>支持我们、支持好新闻，请成为<a href="http://bit.ly/2wVfM6g">付费会员</a>，即可畅读全站所有好内容。我们还有推出<a href="https://bit.ly/3bUODnu">学生方案</a>，一起与端传媒站得更近。</p>
 <h2>【年度最佳新闻作品】黄品维／自由摄影师</h2>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/8889b7fc7016456aa8b19381733c0947.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="一般新闻第一名，及年度最佳新闻摄影作品。2022年8月7日，共军在裴洛西访台后，实施一系列围台军演，我国国军也加强戒备，两岸关系高度紧张。然而，多数民众并未受到影响，在基隆外木山海域游玩的民众，与远方的海军形成对比。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">一般新闻第一名，及年度最佳新闻摄影作品。2022年8月7日，共军在裴洛西访台后，实施一系列围台军演，我国国军也加强戒备，两岸关系高度紧张。然而，多数民众并未受到影响，在基隆外木山海域游玩的民众，与远方的海军形成对比。</figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/8889b7fc7016456aa8b19381733c0947.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="一般新闻第一名，及年度最佳新闻摄影作品。2022年8月7日，共军在裴洛西访台后，实施一系列围台军演，国军也加强戒备，两岸关系高度紧张。然而，多数民众并未受到影响，在基隆外木山海域游玩的民众，与远方的海军形成对比。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">一般新闻第一名，及年度最佳新闻摄影作品。2022年8月7日，共军在裴洛西访台后，实施一系列围台军演，国军也加强戒备，两岸关系高度紧张。然而，多数民众并未受到影响，在基隆外木山海域游玩的民众，与远方的海军形成对比。</figcaption></figure>
 
-<p>本届比赛亦增设当代热点类照片，选出摄影记者前往乌克兰纪录战争的珍贵照片。本届评审团主席陈佳琦老爱师表示：“这一次虽然参赛件数下降，但是整体摄影作品水准并未下降。肖像类的作品今年有许多不错的作品，不论在构图或人物表现上都颇为用心，所以今年多选出了一件优选作品。尤其当代热点的类别，看见了台湾媒体对于国际新闻事件的积极参与，也照见了台湾在世界地缘政治的处境，带回来更多元的观点。”</p>
+<p>本届比赛亦增设当代热点类照片，选出摄影记者前往乌克兰纪录战争的珍贵照片。本届评审团主席陈佳琦老师表示：“这一次虽然参赛件数下降，但是整体摄影作品水准并未下降。肖像类的作品今年有许多不错的作品，不论在构图或人物表现上都颇为用心，所以今年多选出了一件优选作品。尤其当代热点的类别，看见了台湾媒体对于国际新闻事件的积极参与，也照见了台湾在世界地缘政治的处境，带回来更多元的观点。”</p>
 <h2>【年度最佳新闻作品集】林振东／端传媒</h2>
 <section class="album">
 
@@ -109,7 +110,7 @@ author:
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/4a4c5c922ba84f1bb9728599460ada46.jpg?imageView2/1/w/1080/h/810/format/jpg" alt="2022年6月21日，一双情侣在落马州边境遥看深圳。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年6月21日，一双情侣在落马州边境遥看深圳。摄：林振东/端传媒</figcaption></figure></section>
 
-<h2>【系列照片】第二名 陈焯煇／端传媒</h2>
+<h2>【系列照片】第二名 陈焯𪸩／端传媒</h2>
 <section class="album">
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/464807c0faab42e4a31f9c95d3fa946e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="宜兰大溪的蒋介石像。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -142,19 +143,19 @@ author:
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/e7a1c014fd5846ef85ee735fc7f48ccc.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="台北中正纪念堂蒋介石像。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">台北中正纪念堂蒋介石像。摄：陈焯𪸩/端传媒</figcaption></figure></section>
 
-<h2>【一般新闻类】第二名 陈焯煇／端传媒</h2>
+<h2>【一般新闻类】第二名 陈焯𪸩／端传媒</h2>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/fb8b481496544c008697ab81e1658c9e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月25日，大雨下，台北民进党总部外举行陈时中的选前之夜竞选集会，总统蔡英文、行政院长苏贞昌为其站台。民进党在九合一选举中失利，台北市市长候选人陈时中最终败选。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年11月25日，大雨下，台北民进党总部外举行陈时中的选前之夜竞选集会，总统蔡英文、行政院长苏贞昌为其站台。民进党在九合一选举中失利，台北市市长候选人陈时中最终败选。摄：陈焯𪸩/端传媒</figcaption></figure>
 
-<h2>【突发新闻类】第三名 陈焯煇／端传媒</h2>
+<h2>【突发新闻类】第三名 陈焯𪸩／端传媒</h2>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/4764b5ad8994457b85e2bc1218ace6f0.jpg?imageView2/1/w/1080/h/610/format/jpg" alt="2022年9月18日下午2时44分，台湾台东县池上乡发生了规模6.8的地震；虽然震央位于池上，但受创最深的地区为花莲玉里周边，并传出建物倒塌、桥梁断裂与人员受困的消息。图为2022年9月20日，玉里高寮大桥。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年9月18日下午2时44分，台湾台东县池上乡发生了规模6.8的地震；虽然震央位于池上，但受创最深的地区为花莲玉里周边，并传出建物倒塌、桥梁断裂与人员受困的消息。图为2022年9月20日，玉里高寮大桥。摄：陈焯𪸩/端传媒</figcaption></figure>
 
-<h2>【体育新闻类】优选 陈焯煇／端传媒</h2>
+<h2>【体育新闻类】优选 陈焯𪸩／端传媒</h2>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/84775f3006eb438280118340c55a695a.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月24日，花莲，111年全国中等学校运动会，一名原住民拳击动运员在热身，台湾持续天气炎热，花莲地区达40度高温。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年7月24日，花莲，111年全国中等学校运动会，一名原住民拳击动运员在热身，台湾持续天气炎热，花莲地区达40度高温。摄：陈焯𪸩/端传媒</figcaption></figure>
 
-<h2>【系列照片之当代热点】优选 陈焯煇／端传媒</h2>
+<h2>【系列照片之当代热点】优选 陈焯𪸩／端传媒</h2>
 <section class="album">
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/c9e006df5b90478fb429c92b3d270320.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月17日，为强化全民国防，国防部在桃园马祖文创园区举办“进击的迷彩”活动，市民拿著枪观看。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -189,7 +190,7 @@ author:
 
 </section>
 
-<h2>【图文特写类】优选 陈焯煇／端传媒</h2>
+<h2>【图文特写类】优选 陈焯𪸩／端传媒</h2>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230514-photo-tppa-awards/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/c5ba7b7288344973976fb725aa1bb892.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月24日，基隆，一间市场内的美容店播放高虹安的记者会，一名顾客正在店内护肤。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年11月24日，基隆，一间市场内的美容店播放高虹安的记者会，一名顾客正在店内护肤。摄：陈焯𪸩/端传媒</figcaption></figure>
 
