--- a/_posts/2023-05-14-INMEDIA-港超聯-深水埗呑東方四蛋-郭嘉諾確認離隊-點都係成功嘅一季.html
+++ b/_posts/2023-05-14-INMEDIA-港超聯-深水埗呑東方四蛋-郭嘉諾確認離隊-點都係成功嘅一季.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/20230514k.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>港超聯在周日母親節，在深水埗運動場上演煞科戰補賽，深水埗淨呑東方四蛋，主教練郭嘉諾賽後確認將會離隊。郭嘉諾認為，以深水埗首季踢港超聯來說，「我哋點都係成功嘅一季」：「唔係話我哋贏唔到乜嘢就代表失敗，我哋係第一年上嚟，我哋achieve 到，由我incharge 到宜家我哋攞到七分。」</p>
-<p>在去年10月，郭嘉諾接掌深水埗，代替辭職的潘文迪。球隊最終以18賽2勝1和得7分，以第九名完成賽事。郭嘉諾表示，球隊在菁英盃曾迫和理文、贏大埔，對港超聯新丁來說已屬於好開始。</p>
+<p>在去年10月，郭嘉諾<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E3%80%90%E6%B8%AF%E8%B6%85%E8%81%AF%E3%80%91%E9%83%AD%E5%98%89%E8%AB%BE%E6%8E%A5%E6%8E%8C%E6%B7%B1%E6%B0%B4%E5%9F%97%E5%85%88%E9%87%8D%E5%BB%BA%E7%90%83%E5%93%A1%E4%BF%A1%E5%BF%83-%E5%86%80%E4%BB%A5%E6%85%8B%E5%BA%A6%E7%88%AD%E5%8B%9D">接掌</a>深水埗，代替辭職的潘文迪。球隊最終以18賽2勝1和得7分，以第九名完成賽事。郭嘉諾表示，球隊在菁英盃曾迫和理文、贏大埔，對港超聯新丁來說已屬於好開始。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/02wS6529i4" title="DSC_6046"><img src="https://live.staticflickr.com/65535/52896192572_f9f33b2b41_b.jpg" width="1024" alt="DSC_6046" /></a></p>
 <p><strong>郭嘉諾：我未有動向  感謝深水埗給予機會</strong></p>
 <p>郭嘉諾表示，其任務是「執返正」球隊，給予年輕球員機會，在有限資源下增兵增強競爭力，及建立團隊包括助教、體能教練及心理教練等：「我嘅任務已經完成。」他祝願深水埗日後發展順利，有更多球員能獨當一面，為本地球壇提供新血。</p>
@@ -28,7 +28,7 @@ author: 獨媒報導
 <p>下半場換邊後，52分鐘，胡晉銘左路盤球到底線，疑似出界，陳靜謙對旁證咆哮：「出界呀！睇唔睇X到出界呀！」55分鐘，東方反擊，黃皓雋後場策動攻勢，孫銘謙禁區內壓過波比，再射門但斜出。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/AM6SZ9HQ76" title="DSC_5941"><img src="https://live.staticflickr.com/65535/52896276112_805542c01e_b.jpg" width="1024" alt="DSC_5941" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0QS12ThmMM" title="DSC_5987"><img src="https://live.staticflickr.com/65535/52896844006_64388c85cb_b.jpg" width="1024" alt="DSC_5987" /></a></p>
-<p>59分鐘，鄧子均推順禁區頂起腳，葉鴻輝一抱入懷。76分鐘，孫銘謙單刀扭過奧力斯，並力壓捷西斯起腳，為東方射入3:0。至補時階段，雨勢再次加劇，球場多處已成為「薯仔田」。95分鐘，孫銘謙在禁區被踢跌，他親自操刀，今次一射入網，個人梅開二度，東方大勝4:0。</p>
+<p>59分鐘，鄧子均推順禁區頂起腳，葉鴻輝一抱入懷。76分鐘，孫銘謙單刀扭過奧力斯，並力壓捷西斯起腳，為東方射入3:0。至補時階段，雨勢再次加劇，球場多處已成為「薯仔田」。95分鐘，孫銘謙在禁區被陳靜謙踢跌，他親自操刀，今次一射入網，個人梅開二度，東方大勝4:0。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/W5065krXQ2" title="DSC_6006"><img src="https://live.staticflickr.com/65535/52897234610_ab33708ab0_b.jpg" width="1024" alt="DSC_6006" /></a></p>
 <p>黃靖揚及後眼睛受傷，沈雲燮示意隊醫入場，並陪同他到場邊治療，郭嘉諾在完場後對黃靖揚稱：「傻X咗呀？頂埋落去先，打少兩個呀！」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/A90d5XR520" title="DSC_6025"><img src="https://live.staticflickr.com/65535/52897158295_ce6f66b010_b.jpg" width="1024" alt="DSC_6025" /></a></p>
