--- a/_posts/2023-05-16-INMEDIA-本地球壇再爆-打假波-貝鈞奇稱遺憾-未必一定是壞事.html
+++ b/_posts/2023-05-16-INMEDIA-本地球壇再爆-打假波-貝鈞奇稱遺憾-未必一定是壞事.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202300516b.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>本地球壇再爆非法外圍賭博「打假波」案，廉政公署下午將舉行記者會交代案情，據了解涉甲組聯賽。足總主席貝鈞奇今午出席一個活動記者會後，《獨媒》問到對於再有不愉快事件發生，他稱感到遺憾，但認為未必一定是壞事：「希望清理⋯⋯假如真係有咁樣嘅問題，我哋都好支持採取行動，需要剷草除根，應該要⋯⋯清理，我哋幾十年都係希望⋯⋯。」</p>
+<img src="https://www.inmediahk.net/files/column_images/202300516b.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>本地球壇再爆非法外圍賭博「打假波」案，廉政公署下午將舉行記者會交代案情，據了解涉甲組聯賽。足總主席貝鈞奇今午出席一個活動記者會後，《獨媒》問到對於再有不愉快事件發生，他稱感到遺憾，但認為未必一定是壞事：「希望清理⋯⋯假如真係有咁樣嘅問題，我哋都好支持採取行動，需要斬草除根，應該要⋯⋯清理，我哋幾十年都係希望⋯⋯。」</p>
 <p>消息指廉政公署執行處周日（14日）採取行動，拘捕多名甲組聯賽球隊的球員。《獨媒》亦獲悉，廉署人員早前已到涉案球隊的比賽場地調查。</p>
 <p>足總下午舉行賽馬會菁英盃決賽賽前記者會，貝鈞奇在記者會後被多名記者追問事件，廉政公署當時尚未發出採訪通知。貝鈞奇稱不宜評論，「暫時未有資料，需要晏少少」。</p>
 <p>據了解一支「有前科」的球隊再次涉案，有記者就問到「好似都係嗰間」，貝鈞奇則稱當然不止涉及一間球會的問題：「最主要我有句說話叫做，野火燒不盡，春風吹又生，『剷草除根』最緊要，個根除唔到，就永遠都有都有一種延續或者乜嘢。」</p>
