--- a/_posts/2023-05-16-INMEDIA-3年前喜茶被毀-青年遞傘予同伴用以-搶犯-阻差辦公上訴遭駁回-官-二人共同行事.html
+++ b/_posts/2023-05-16-INMEDIA-3年前喜茶被毀-青年遞傘予同伴用以-搶犯-阻差辦公上訴遭駁回-官-二人共同行事.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/05161498-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2020年5月13日林鄭生日，有人號召到沙田新城市廣場「和你Sing」，有人破壞已結業的內地連鎖飲品店「喜茶」分店，18歲青年被指遞傘給另一人以協助被制服者逃脫，被裁定阻差辦公罪成，判囚5個月。他獲准保釋以等候上訴，高院法官張慧玲今（16日）駁回他的定罪上訴，維持原判。青年須即時入獄服刑。判詞指出，青年將雨傘交給另一人，好讓對方使用雨傘來「搶犯」，其間青年近距離觀看，事後亦一同離開現場，二人乃共同行事，張官裁定原審定罪無不穩妥之處。</p>
+<img src="https://www.inmediahk.net/files/column_images/05161498-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2020年5月13日林鄭生日，有人號召到沙田新城市廣場「和你Sing」，有人破壞內地連鎖飲品店「喜茶」分店，18歲青年被指遞傘給另一人以協助被制服者逃脫，被裁定阻差辦公罪成，判囚5個月。他獲准保釋以等候上訴，高院法官張慧玲今（16日）駁回他的定罪上訴，維持原判。青年須即時入獄服刑。判詞指出，青年將雨傘交給另一人，好讓對方使用雨傘來「搶犯」，其間青年近距離觀看，事後亦一同離開現場，二人乃共同行事，張官裁定原審定罪無不穩妥之處。</p>
 <p>上訴人梁俊熹被指在便衣警員14511制服另一名人士期間，與其他人衝上前包圍警員，另一被告王嘉城打開傘及腳踢警員，並拉起被制服人士，使他逃脫。原審裁判官崔美霞指當時場面混亂、出現暴力，梁不但沒有因而避開，反而向警員走近，更向黑衣人伸出手，明顯配合王嘉城的阻撓行為，因此裁定阻差辦公罪成。</p>
 <p>高院法官張慧玲在判詞中指出，審視錄影片段後，認為上訴人、另一被告王嘉城與其他黑衣人明顯是在知悉「喜茶」發生了事故而奔向「喜茶」，當王向上訴人伸手時，上訴人便非常合拍地將他手持的雨傘交給王，王隨即接近正在包圍便衣警和被制服人士的人群，上訴人亦尾隨王，並從無嘗試離開。王成功「搶犯」後，上訴人亦尾隨王逃離現場。 </p>
 <p>張官同意律政司一方所指，上訴人並非在不知就裡、沒有預兆下目睹王嘉城的襲擊及「搶犯」行為，若說上訴人並非與王共同行事，不是一個合理推論。相反，張官認為上訴人與王乃共同行事，他將雨傘交給王，好讓王使用雨傘來「搶犯」，其間上訴人近距離觀看，從而在有需要時提供協助。</p>
@@ -16,4 +16,4 @@ author: 獨媒報導
 <p>另一18歲青年侯羿同於群組內提及「你哋可以的話盡量裝修」、「文具小心帶」等，被裁定煽惑他人刑事損壞罪成，被判入教導所。他獲准保釋等候上訴，但由於早前因病入院，未能出席上訴聆訊，法官押後處理他的上訴。</p>
 <p>案件編號：HCMA166/2022</p>
 <p>相關報導：<br /><a href="https://www.inmediahk.net/node/社運/5少年涉毀喜茶阻差等-孖生兄弟因警未能辨認身分罪脫-另3人罪成">5少年涉毀喜茶阻差等 孖生兄弟因警未能辨認身分罪脫 另3人罪成</a><br /><a href="https://www.inmediahk.net/node/社運/涉呼籲毀「喜茶」男生判入教導所-2男生阻差辦公判監5至6個月">涉呼籲毀「喜茶」男生判入教導所 2男生阻差辦公判監5至6個月</a></p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
